[gd_scene load_steps=3 format=3 uid="uid://dj1giy3qvujh8"]

[ext_resource type="Script" uid="uid://bmesfy887axjt" path="res://Player/Inventory/Crafting_ui_slot.gd" id="1_56lum"]
[ext_resource type="PackedScene" uid="uid://clj4jdq70otwf" path="res://Player/Inventory/recipe_requirement.tscn" id="2_rtu23"]

[node name="Crafting_ui_slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 48)
offset_right = 32.0
offset_bottom = 16.0
mouse_filter = 2
script = ExtResource("1_56lum")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crafting_Recipes" type="Panel" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_right = 8.0
offset_bottom = 16.0
grow_horizontal = 2
mouse_filter = 2

[node name="Item_display" type="Sprite2D" parent="Crafting_Recipes"]
position = Vector2(8, 8)

[node name="Label" type="Label" parent="Crafting_Recipes"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Recipe_Requirement" parent="VBoxContainer" instance=ExtResource("2_rtu23")]
layout_mode = 2

[node name="Recipe_Requirement2" parent="VBoxContainer" instance=ExtResource("2_rtu23")]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
